Added an image to the index.html file
This is a simple logo image

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
    
   <div class="container">
+    <img src="https://th.bing.com/th/id/R.df3b76223378a3289e61dec17e3bcb4c?rik=K2SJv4Jn2kxhNg&riu=http%3a%2f%2f2.bp.blogspot.com%2f-PfRbsJ_a0XM%2fT_1jtcHl7OI%2fAAAAAAAAAKc%2fzKzXSuEqZFc%2fs1600%2fsample-logo-2.jpg&ehk=s4OF0IBBup7%2bKuB2Xw0yQZOtFerzq95ofjTocu7UYe4%3d&risl=&pid=ImgRaw&r=0" alt="">
     <div class="row">
       <div class="col-md-10 col-md-offset-1">
         <div class="title text-center">
